--- a/src/List/List/List.vcxproj.filters
+++ b/src/List/List/List.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Calculating.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Calculating.cpp">
