--- a/src/Polinom/Polinom/Polinom.vcxproj
+++ b/src/Polinom/Polinom/Polinom.vcxproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monom.cpp" />
     <ClCompile Include="Polinom.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
