--- a/src/List/List/List.vcxproj
+++ b/src/List/List/List.vcxproj
@@ -118,6 +118,8 @@
     <ClInclude Include="Calculating.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="TArrayStack.h" />
+    <ClInclude Include="TListStack.h" />
     <ClInclude Include="VirtualStack.h" />
   </ItemGroup>
   <ItemGroup>
